assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Rajdhani:wght@300;400;500;600;700&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Space+Grotesk:wght@300..700&display=swap');

/* Asterisk for overriding browser defaults */
/* Asterisk property and values from Code Institute Love Running Project*/
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/* Generic body styles */
body {
    background-color: #ffffff;
    min-height: 100vh;
    /* display and flex direction taken from Love Running Project*/
    display: flex;
    flex-direction: column;
    font-family: 'Roboto', Rajdhani, sans-serif;
}

main {
    background-color: #ffffff;
    /* Flex property and values taken from the Love Running Project */
    flex: 1 0 auto;
    margin-top: 68px;
}

h2 {
    font-family: 'Space Grotesk', sans-serif;
    font-size: 300%;
    letter-spacing: 3px;
    color: #00008b;
    font-weight: 300;
    margin-top: 8%;
    margin-bottom: 4%;
    text-align: center;

}

h3 {
    font-family: 'Rajdhani', sans-serif;
    font-size: 180%;
    text-decoration: underline;
    color: #8b0000;
    margin-bottom: 2%;
}

h4 {
    font-family: 'Rajdhani', sans-serif;
    letter-spacing: 5px;
}

p {
    font-family: 'Raleway', sans-serif;
    font-size: 150%;
    padding: 5%;
}

ul li {
    list-style-type: none;
    font-family: 'Raleway', sans-serif;
}

.icon {
    letter-spacing: 1rem;
}

.text-center {
    margin-top: 0.5rem;
    text-align: center;
}

.color-block-a {
    background-color: #666699;
    color: #ffffff;
}

.color-block-b {
    background-color: #6a7191;
    color: #ffffff;
}


.p-title {
    font-family: 'Rajdhani', sans-serif;
    font-size: 180%;
    padding-top: 3%;
}

.left-alignment {
    padding: 5%;
}

.white-text {
    color: #ffffff;
    text-decoration: none;
    font-weight: 500;
    font-size: 250%;
}

.smaller-font {
    font-size: 100%;
}


/* Header styles */
header {
    /* properties; position, box-shadow, z-index, width and justify-content taken from Love Running Project */
    background-color: #a9a9a9;
    position: fixed;
    padding-left: 3%;
    box-shadow: 0 2px 2px #a9a9a9;
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    z-index: 99;
    padding-bottom: 5%;
    padding-top: 2%;
}

/* taken from Love Running Project */
header a {
    text-decoration: none;
}

h1 {
    font-family: 'Space Grotesk', sans-serif;
    color: #000000;
    letter-spacing: 10px;
    text-transform: uppercase;
    font-size: 150%;
    text-align: center;
}

/* Taken from Love Running Project */
#main-menu {
    font-family: 'Rajdhani', sans-serif;
    letter-spacing: 5px;
    list-style-type: none;
}

/* Taken from Love Running Project */
#main-menu li {
    margin-bottom: 1em;
    margin-left: 2rem;
}

/* Class name taken from Love Runnng Project */
.active {
    color: #8b0000;
    font-weight: bolder;

}

/* properties position, width, left, display taken from Love Running Project */
nav {
    position: absolute;
    padding-left: 3%;
    padding-top: 2%;
    display: none;
    top: 100%;
    background-color: #f5f5f5;
    width: 100%;
    left: 0;
}

/* Taken from Love Running Project */
#nav-toggle:checked~nav {
    display: block;
}

/* Taken from Love Running Project */
#nav-toggle {
    display: none;
}

/* name and property font-size taken from Love Running Project*/
.nav-toggle-lable {
    font-size: 2rem;
    padding-right: 3%;
}


nav a {
    text-decoration: none;
    color: #000000;
}

/* Main Content styles */


/* Hero styling */
/* taken from Love Running Project */
#hero {
    background-image: url(../images/hero_image.jpg);
    width: 100%;
    height: 200px;
    background-position: center;
    background-size: cover;
    position: relative;
}

#hero-text {
    position: absolute;
    bottom: 1rem;
    right: 1rem;
    background-color: rgba(255, 95, 0, 0.6);
}



.blue-image {
    position: relative;
    border-radius: 20%;
    border: 10px solid #00008b;
    padding: 3px;
}

.image-alignment {
    width: 100%;
    height: 60%;
    margin-top: 1rem;
}

.orange-image {
    position: relative;
    border-radius: 20%;
    border: 10px solid #ff5f00;
    padding: 3px;
}

.list-icon {
    display: grid;
    margin-bottom: 1.5rem;
}

#welcome-message {
    font-size: 180%;
    font-weight: bold;
    text-transform: uppercase;
    letter-spacing: 4px;
    text-align: center;
}

#whats-here-list {
    font-size: 150%;
    padding-left: 10%;
    padding-right: 5%;
    padding-top: 5%;
    padding-bottom: 5%;
    text-align: center;
}


#whats-here-list li::marker {
    font-size: 2rem;
}

.website a {
    color: #ffffff;
}



.dates {
    padding-left: 5%;
}

.box-size {
    border: 2px solid #ffffff;
}

.box-size-2 {
    border: 2px solid #ffffff;
}




#stars-background {
    background-image: url(../images/stars_background.jpg);
    background-attachment: fixed;
    width: 100%;
    background-position: center;
    background-size: cover;
}

.opacity {
    opacity: 80%;
}

.profile-img-1 {
    width: 100%;
    padding-top: 10px;
    padding-bottom: 5px;
}

.wrap {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
}

summary.p-title {

    font-size: 160%;
}

details[open] {
    padding-left: 4%;
}



table {
    font-family: 'Raleway', sans-serif;
    letter-spacing: 3px;
    text-align: center;
}

table th {
    padding: 0.5rem;
}

table td {
    padding: 0.5rem;
}

#opening-times {
    margin: auto;
}

#address {
    letter-spacing: 3px;
    font-weight: 400;
    text-transform: uppercase;
}

#map {
    width: 100%;
    height: 600%;
}

#contact-details {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
}

#contact-details a {
    text-decoration: none;
    color: #ffffff;
}

caption {
    display: none;
}

.form input {
    margin-left: 4%;
}

#smaller-paragraph {
    text-align: left;
    font-size: 120%;
}

#options-list {
    margin-bottom: 1em;
    position: relative;
    text-align: left;
    justify-content: space-evenly;
}

#submit-button {
    font-size: 130%;
}

#volunteer-img {
    width: 100%;
    height: 200px;
    background-position: center;
    background-size: cover;
    position: relative;
    display: block;
    margin-left: auto;
    margin-right: auto;
}

/* Footer styles */
footer {
    background-color: darkgrey;
    padding-left: 0.5rem;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    font-size: 110%;
    padding-bottom: 0.5rem;
}

footer a {
    text-decoration: none;
    color: black;
}

/* properties display, justify-content and list-style with their values taken from Love Running Project*/
#social-media-links {
    display: flex;
    justify-content: space-evenly;
    list-style: none;
    padding-top: 2%;
    padding-bottom: 2%;
}

/* styling for smaller screens */

@media screen and (max-width: 374px) {

    h1 {
        font-size: 100%;
    }
}


/* styling for larger screens */
@media screen and (min-width: 768px) {
    /* General */

    main {
        margin-top: 80px;
    }

    h2 {
        margin-top: 12%;
    }


    /* Header */
    header {
        height: 80px;
        padding-top: 5%;
    }

    h1 {
        font-size: 200%;
    }

    nav {
        display: block;
        position: absolute;
        width: fit-content;
        height: 80px;
        padding-right: 2%;
    }

    /*taken from Love Running Project */
    #main-menu {
        display: flex;
    }

    /* taken from Love Running Project */
    .nav-toggle-lable {
        display: none;
    }

    /* Main Content */

    #hero {

        height: 400px;

    }

    #hero-text {

        font-size: x-large;
    }

    .block-a {
        width: 50%;
        margin: auto;

    }

    .block-b {
        width: 50%;
    }



    .box-size {
        width: 50%;
    }


    .profile-img-1 {
        width: 50%;

    }

    .p-title {
        width: 50%;
    }

    summary.p-title {
        padding-left: 5%;
    }


    .text-size {
        font-size: 120%;
    }


    .form {
        display: ruby-text;
        font-size: larger;
    }

    #volunteer-img {
        height: 400px;
    }

}

@media screen and (min-width: 992px) {

    main {
        margin-top: 182px;
    }

    h2 {
        font-size: 400%;
    }

    /* header */
    h1 {
        font-size: 250%;
    }

    nav {
        width: 100%;
    }

    nav li {
        margin-right: 2%;
    }

    #main-menu {
        display: flex;
        justify-content: space-between;
    }

    #main-menu a:hover {
        font-size: x-large;
        font-weight: bolder;
    }

    /* Main Content */


    /* Hero */
    #hero-text {
        font-size: xx-large;
    }

    .block-a {
        width: 50%;
        margin: auto;

    }

    .block-b {
        width: 50%;
    }

    .website {
        width: 100%;
        display: flex;
        flex-direction: column;

    }

    .box-size {
        width: 33.3%;
    }

    .box-size-2 {
        width: 50%;
    }

    .width {
        width: 65%;
    }

    .right {
        float: right;
    }


    .form {
        font-size: 150%;
    }

    #volunteer-img {
        display: flex;
        margin-left: auto;
        margin-right: auto;
        width: auto;
    }

    /* footer */

    footer {
        flex-direction: row;
        height: 60px;
        align-content: center;
        align-items: center;
        padding-left: 15.5rem;
    }

    #social-media-links {
        font-size: x-large;
    }

    #social-media-links li {
        margin-right: 10em;
    }

}

@media screen and (min-width: 1200px) {

    .box-size {
        width: 25%;
    }

    .box-size-3 {
        width: 100%;
        text-align: center;
    }
}

@media screen and (min-width: 1400px) {

    #hero {
        height: 550px;
    }

}

